--- a/FL12_HW1/homework/index.html
+++ b/FL12_HW1/homework/index.html
@@ -61,15 +61,14 @@
                   <p></p>
                   <h2>Text formats</h2>
                   <h3>Article</h3>
-                  <p></p>
                   <dl>
-                      <dt>&emsp;Article title</dt>
+                      <dt>&emsp;<h2>Article title</h2></dt>
                       <p></p>
                       <dd>&emsp;Article description</dd>
                   </dl>
                   <p></p>
                   <dl>
-                      <dt>Preformatted Text</dt>
+                      <dt><h3>Preformatted Text</h3></dt>
                       <p></p>
                       <pre>Text in a <strong>pre</strong> element
 is displayed in a fixed-width
@@ -80,21 +79,140 @@ and <strong>line breaks</strong>
                   </dl>
                   <p></p>
                   <dl>
-                      <dt>This is code</dt>
+                      <dt><h3>This is code</h3></dt>
                       <p></p>
                       <code>
-                          .flex {
-                              display: flex;
-                              justify-content: justify;
-                              aliign-items: center;
-                          }
-
+                          <pre>
+.flex {
+    display: flex;
+    justify-content: justify;
+    aliign-items: center;
+}
+                      </pre>
                       </code>
                   </dl>
-
-
-
-
+                  <p></p>
+                  <dl>
+                      <dt><h2>Undordered Wish List</h2></dt>
+                  </dl>
+                  <p></p>
+                  <ul>
+                      <li>IPhone 11 Pro max</li>
+                      <li>Books</li>
+                          <ul>
+                              <li>Clean code principles javascript</li>
+                              <li>You dont know JS</li>
+                              <li>Angular Pro</li>
+                          </ul>
+                      <li>Headphones</li>
+                  </ul>
+                  <p></p>
+                  <dl>
+                      <dt><h2>Ordered Task List</h2></dt>
+                  </dl>
+                  <p></p>
+                  <ol>
+                      <li>Pay the bills</li>
+                      <li>Refuel the car</li>
+                      <li>Finish homework</li>
+                          <ol>
+                              <li>Create HTML page according to the requirements</li>
+                              <li>Upload to the GitHub repository</li>
+                          </ol>
+                      <li>Enjoy your day</li>
+                  </ol>
+                  <p></p>
+                  <h3>Definition List</h3>
+                  <p></p>
+                  <dl>
+                      <dt>HTML</dt>
+                          <dd>HTML is the standart markup language to create Web pages</dd>
+                      <p></p>
+                      <dt>CSS</dt>
+                          <dd>CSS describes how HTML elements are to be displayed</dd>
+                      <p></p>
+                      <dt>JavaScript</dt>
+                          <dd>JavaScript is a scripting languages, primarily used on the Wep.</dd>
+                  </dl>
+                  <p></p>
+                  <h3>Select for learning
+                      <select name = "select">
+                          <option value = "JS">JS</option>
+                          <option value = "CSS">CSS</option>
+                          <option value = "HTML">HTML</option>
+                      </select>
+                  </h3>
+              <hr/>
+          <hr/>
+                      <p></p>
+                      <dl>
+                          <dt><h2>Ordered Task List</h2></dt>
+                      </dl>
+                      <p></p>
+                      <table>
+                          <thead>
+                              <th>Skill</th>
+                              <th>Training</th>
+                              <th>City</th>
+                          </thead>
+                          <tbody>
+                              <tr>
+                                  <td>JAVA</td>
+                                  <td>JAVA development training</td>
+                                  <td>Lviv</td>
+                              </tr>
+                              <tr>
+                                  <td>JAVASCRIPT</td>
+                                  <td>FRONT-END development</td>
+                                  <td>Kharkiv</td>
+                              </tr>
+                              <tr>
+                                  <td>IOS</td>
+                                  <td>IOS winter 2019</td>
+                                  <td>Kyiv</td>
+                              </tr>
+                              <tr>
+                                  <td>DEVOPS</td>
+                                  <td>DEVOPS spring 2020</td>
+                                  <td>Dnipro</td>
+                              </tr>
+                          </tbody>
+                          <p></p>
+                          <dl>
+                              <dt><h2>Blockquotes</h2></dt>
+                          </dl>
+                      </table>
+                      <p></p>
+                      <dl>
+                          <dt><h2>Ordered Task List</h2></dt>
+                      </dl>
+                      <p>Let's keep it simple. Italics are good to help set it from the body text. Be sure to style the citation.</p>
+                      <blockquote>"So if you want to go fast, if you want to get done quickly, if you want your code to be easy to write, make it easy to read."</blockquote>
+                      <blockquote><a href = "https://google.com">Robert C. Martin(Uncle Bob)</a></blockquote>
+                      <hr/>
+                      <p></p>
+                      <ul dir = "rtl">
+                          <p>
+                              <label for = "username">Username:</label>
+                              <input type = "text" id = "username" username = "user_name">
+                          </p>
+                          <p>
+                              <label for = "mail">Email:</label>
+                              <input type = "email" id = "mail" username = "user_mail">
+                          </p>
+                          <p>
+                              <label for = "password">Password:</label>
+                              <input type= "password" name = "password">
+                          </p>
+                          <p>
+                              <label for = "msg"></label>
+                              <textarea id = "msg" username = "user_message"></textarea>
+                          </p>
+                          <p>
+                              <input type = "submit" value = "Submit">
+                          </p>
+                      </ul>
+                      <footer>© Copyright Epam Systems</footer>
               </font>
           </p>
         </div>
