--- a/FL12_HW1/homework/index.html
+++ b/FL12_HW1/homework/index.html
@@ -23,7 +23,7 @@
                   Lorem ipsum dolor sit amet,
                   <a href = "https://google.com">test link</a> adipiscing elit. Nullam dignissim convallis est.
                   Quisque aliquam. <i>This is emphasized</i>. Donec faucibus. Nunc iaculis suscipit dui. 4 <sup>4</sup> = 256.
-                  Water is H<sub>3</sub>PO<sub>4</sub>. Nam sit amet sem. Aliquam libero nisi, imperdiet at,
+                  Phosphoric acid is H<sub>3</sub>PO<sub>4</sub>. Nam sit amet sem. Aliquam libero nisi, imperdiet at,
                   tincidunt nec, gravida vehicula, nisl. <i>Time Magazine</i> (That’s a citation).
                   <u>Underline</u>. Maecenas ornare tortor. Donec sed tellus eget sapien fringilla nonummy.
                   Mauris a ante.Suspendisse quam sem, consequat at, commodo vitae, feugiat in, nunc.
@@ -194,7 +194,7 @@ and <strong>line breaks</strong>
                       <ul dir = "rtl">
                           <p>
                               <label for = "username">Username:</label>
-                              <input type = "text" id = "username" username = "user_name">
+                              <input type  = "text" id = "username" username = "user_name">
                           </p>
                           <p>
                               <label for = "mail">Email:</label>
